@@ -5,6 +5,9 @@ Release 5.0.10 (unreleased)
 Bug fixes
 ---------
 
+- Fix missing free surface boundary movement in some cases depending on
+  which pages were visited in the GUI (GitHub issue #27).
+
 - Compressible: fix density time scheme in transported passive scalar/vector
   balance to ensure conservativity with compressible algorithm.
 
